# groonga-tokenizer-friso

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac  groonga-tokenizer-friso.pc.in
.github/workflows/: linux.yml
test/: run-test.sh
test/suite/: groonga.expected  groonga.test  jintian.expected  jintian.test  tiananmen.expected  tiananmen.test  wo_dao_beijing.expected  wo_dao_beijing.test  wo_ma_ma.expected  wo_ma_ma.test
tokenizers/: Makefile.am  friso.c
travis/: friso.sh
